# whop-desktop

./: .env.signing.example  .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
landing/: next.config.ts  package.json  pnpm-lock.yaml
landing/app/: globals.css  layout.tsx  page.tsx  shader-background.tsx
landing/public/downloads/: Whop_0.1.0_aarch64.dmg  Whop_0.1.0_universal.dmg
scripts/: build-signed.sh  generate-icons.sh  make-placeholder-icon.py
src/: main.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: main-capability.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
