[package]
name = "whop-desktop"
version = "0.1.0"
description = "Unofficial personal-use macOS desktop wrapper for whop.com"
authors = ["personal use"]
edition = "2021"
rust-version = "1.77"

# The library holds all app logic; main.rs is a thin launcher. This mirrors the
# standard Tauri 2 project layout.
[lib]
name = "whop_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = [] }
tauri-plugin-notification = "2.3.3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
